--- a/pom.xml
+++ b/pom.xml
@@ -99,4 +99,20 @@
             </plugin>
         </plugins>
     </build>
+<distributionManagement>
+ <!-- Publish the versioned releases here -->
+ 
+  <snapshotRepository>
+  <id>snapshotnexus</id>
+  <name>snapshot nexus</name>
+  <url>http://localhost:8082/repository/maven-snapshots/</url>
+ </snapshotRepository>
+ 
+ <repository>
+  <id>releasenexus</id>
+  <name>release nexus</name>
+  <url>http://localhost:8082/repository/maven-releases//</url>
+ </repository>
+
+</distributionManagement>
 </project>
