--- a/pom.xml
+++ b/pom.xml
@@ -29,9 +29,15 @@
             <version>2.11.0</version>
         </dependency>
         <dependency>
-            <groupId>log4j</groupId>
-            <artifactId>log4j</artifactId>
-            <version>1.2.17</version>
+            <!-- Recommended to upgrade to log4j2 -->
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-api</artifactId>
+            <version>2.19.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.logging.log4j</groupId>
+            <artifactId>log4j-core</artifactId>
+            <version>2.19.0</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -39,6 +45,7 @@
             <version>4.1.2</version>
         </dependency>
         <dependency>
+            <!-- Ensure this custom dependency exists -->
             <groupId>proj</groupId>
             <artifactId>MavenProject</artifactId>
             <version>0.0.1-SNAPSHOT</version>
@@ -49,6 +56,7 @@
             <version>4.1.7</version>
         </dependency>
     </dependencies>
+    
     <repositories>
         <repository>
             <id>my-snapshots</id>
@@ -60,7 +68,7 @@
                 <enabled>false</enabled>
             </releases>
         </repository>
-       <repository>
+        <repository>
             <id>custom-repo</id>
             <url>http://localhost:8082/repository/maven-snapshots/</url>
             <snapshots>
@@ -69,9 +77,8 @@
             <releases>
                 <enabled>true</enabled>
             </releases>
-        </repository> 
+        </repository>
     </repositories>
-    
     
     <build>
         <plugins>
@@ -109,20 +116,18 @@
             </plugin>
         </plugins>
     </build>
-<distributionManagement>
- <!-- Publish the versioned releases here -->
- 
-  <snapshotRepository>
-  <id>snapshotnexus</id>
-  <name>snapshot nexus</name>
-  <url>http://localhost:8082/repository/maven-snapshots/</url>
- </snapshotRepository>
- 
- <repository>
-  <id>releasenexus</id>
-  <name>release nexus</name>
-  <url>http://localhost:8082/repository/maven-releases/</url>
- </repository>
 
-</distributionManagement>
+    <distributionManagement>
+        <!-- Publish the versioned releases here -->
+        <snapshotRepository>
+            <id>snapshotnexus</id>
+            <name>snapshot nexus</name>
+            <url>http://localhost:8082/repository/maven-snapshots/</url>
+        </snapshotRepository>
+        <repository>
+            <id>releasenexus</id>
+            <name>release nexus</name>
+            <url>http://localhost:8082/repository/maven-releases/</url>
+        </repository>
+    </distributionManagement>
 </project>
